# trivex

./: CMakeLists.txt
include/: trivex.h
src/: trivex.c
